--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </header>
 
         <div class="score-frame">
-            <p id="correct-label">Correct: 0</p>
-            <p id="wrong-label">Wrong: 0</p>
+            <p id="correct-label" style="font-weight: bold;">Correct: 0</p>
+            <p id="wrong-label" style="font-weight: bold;">Wrong: 0</p>
         </div>
 
         <div class="content-frame">
@@ -24,7 +24,7 @@
         </div>
 
         <div class="button-frame">
-            <button id="next-button" class="button" disabled>Next Question</button>
+            <button id="next-button" style="font-weight: bold;class="button" disabled>Next Question</button>
             <button id="review-button" class="button">Review Wrong Questions</button>
         </div>
     </div>
