--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
         </div>
 
         <div class="button-frame">
-            <button id="next-button" style="font-weight: bold;class="button" disabled>Next Question</button>
+            <button id="next-button" style="font-weight: bold;" class="button" disabled>Next Question</button>
             <button id="review-button" class="button">Review Wrong Questions</button>
         </div>
+
+        <footer class="footer">
+            <p>Created during late-night study procrastination by <strong>Zeyad Salama</strong> &mdash; Best of luck on the exam!</p>
+        </footer>
     </div>
 
     <script src="script.js"></script>
