--- a/index.html
+++ b/index.html
@@ -29,8 +29,20 @@
         </div>
 
         <footer class="footer">
-            <p>Created during late-night study procrastination by <strong>Zeyad Salama</strong> &mdash; Best of luck on the exam!</p>
+            <p>
+                Created during late-night study procrastination by <strong>Zeyad Salama</strong> &mdash; Best of luck on the exam! 💖
+            </p>
+            <p style="margin-top: 10px;">
+                Noticed an issue such as a website bug, typo, or incorrect question/answer? Let me know on 
+                <a href="https://wa.me/201202006936" target="_blank" style="color: #25D366; text-decoration: none;">
+                    <strong>WhatsApp</strong>
+                </a> or 
+                <a href="https://t.me/xslizemoon" target="_blank" style="color: #0088cc; text-decoration: none;">
+                    <strong>Telegram</strong>
+                </a>.
+            </p>
         </footer>
+
     </div>
 
     <script src="script.js"></script>
