--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
         <footer class="footer">
             <p>
-                Created during late-night study procrastination by <strong>Zeyad Salama</strong> &mdash; Best of luck on the exam! 💖
+                Created during a late-night study procrastination by <strong>Zeyad Salama</strong> &mdash; Best of luck on the exam! 💖
             </p>
             <p style="margin-top: 10px;">
-                Found website bug, typo, or incorrect question/answer? Let me know on 
+                Found a website bug, typo, or incorrect question/answer? Let me know on 
                 <a href="https://wa.me/201202006936" target="_blank" style="color: #25D366; text-decoration: none;">
                     <strong>WhatsApp</strong>
                 </a> or 
