--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Database Quiz</title>
+    <title>Expert Systems Quiz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <h1>Database Quiz</h1>
+            <h1>Expert Systems Quiz</h1>
         </header>
 
         <div class="exam-mode-container">
