--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="score-frame" id="default-score-frame">
             <p id="correct-label" style="font-weight: bold;">Correct: 0</p>
-            <p id="wrong-label" style="font-weight: bold;">Wrong: 0</p>
+            <p id="wrong-label" style="font-weight: bold;">Incorrect: 0</p>
         </div>
 
         <div class="score-frame" id="exam-score-frame" style="display: none;">
