--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
         </div>
 
         <div class="score-frame" id="default-score-frame">
-            <div id="important-marker" class="important-marker" style="display: none;"
-                title="This question is very important, usually because it's discussed in the lecture or present in the book">
-                Important Question
-            </div>
+            <div id="important-marker" class="important-marker" style="display: none;">Important Question</div>
 
             <p id="correct-label" style="font-weight: bold;">Correct: 0</p>
             <p id="wrong-label" style="font-weight: bold;">Incorrect: 0</p>
