--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
             </div>
         </div>
 
+        <div id="review-popup" class="popup-container" style="display: none;">
+            <div class="popup">
+                <h2>Review Wrong Questions</h2>
+                <div id="wrong-questions-list"></div>
+                <button onclick="closeReviewPopup()">Close</button>
+            </div>
+        </div>
+
         <div class="score-frame" id="default-score-frame">
             <p id="correct-label" style="font-weight: bold;">Correct: 0</p>
             <p id="wrong-label" style="font-weight: bold;">Incorrect: 0</p>
