--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Economics Quiz</title>
+    <title>Web Dev Quiz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
         <header class="header">
-            <h1>Digital Economics Quiz</h1>
+            <h1>Web Dev Quiz</h1>
         </header>
 
         <div class="exam-mode-container">
@@ -50,6 +50,7 @@
         <div class="content-frame">
             <div id="important-marker" class="important-marker" style="display: none;">Important Question</div>
             <div id="question-label" class="question-label"></div>
+            <div id="snippet-container"></div>
             <div id="options-container" class="options-container"></div>
             <p id="feedback-label" class="feedback-label"></p>
         </div>
