--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <div class="popup">
                 <h2>Select Categories</h2>
                 <div id="filter-options"></div>
-                <button onclick="applyFilter()">Apply Filter</button>
-                <button onclick="closeFilterPopup()">Cancel</button>
+                <div id="filter-buttons">
+                    <button onclick="applyFilter()">Apply Filter</button>
+                    <button onclick="closeFilterPopup()">Cancel</button>
+                </div>
             </div>
         </div>
 
