--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Economics Final Exam Quiz</title>
+    <title>Information Security Mid-term Exam Quiz</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
         <header class="header">
-            <h1>Digital Economics Final Exam Quiz</h1>
+            <h1>Information Security Mid-term Exam Quiz</h1>
         </header>
 
         <div class="exam-mode-container">
